--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@app/electron",
+  "name": "@app/cli",
   "version": "1.0.0",
   "description": "",
+  "bin": {
+    "boli": "cli.js"
+  },
   "main": "index.js",
   "scripts": {
-    "start": "tsc && electron ./dist/main.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.8.1",
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.14.1",
-    "electron": "^35.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "catalog:"
   }
 }
