--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "boli-flow",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/main.js",
   "scripts": {
-    "start": "tsc && electron ."
+    "start": "tsc && electron out/electron/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.8.1",
   "devDependencies": {
+    "@app/cli": "workspace:*",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.1",
     "electron": "^35.2.0",
-    "typescript": "^5.8.3",
-    "@app/cli": "workspace:*"
+    "execa": "^9.5.2",
+    "typescript": "^5.8.3"
   }
 }
