--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "c12": "^3.0.3",
     "cac": "^6.7.14",
-    "esbuild": "^0.25.3"
+    "esbuild": "^0.25.3",
+    "execa": "^9.5.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
