--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,14 @@ packages:
 
 catalog:
   typescript: ^5.8.3
+  vue-i18n: ^11.1.3
+  '@vue/eslint-config-prettier': ^10.2.0
+  '@vue/eslint-config-typescript': ^14.5.0
+  eslint: ^9.24.0
+  lint-staged: ^15.5.1
+  simple-git-hooks: ^2.12.1
+  prettier: ^3.5.3
+  electron: ^35.2.0
 
 ignoredBuiltDependencies:
   - '@bolinjs/vite-plugin-log-label'
@@ -10,9 +18,9 @@ ignoredBuiltDependencies:
   - '@swc/core'
   - core-js
   - esbuild
-  - node-pty
   - simple-git-hooks
   - vue-demi
 
 onlyBuiltDependencies:
   - electron
+  - node-pty
