--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,8 @@
     "c12": "^3.0.3",
     "cac": "^6.7.14",
     "esbuild": "^0.25.3",
-    "execa": "^9.5.2"
+    "execa": "^9.5.2",
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
