--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,21 +20,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/platform-socket.io": "^11.0.11",
-    "@nestjs/websockets": "^11.0.11",
-    "file-type": "^20.4.1",
-    "fs-extra": "^11.3.0",
-    "iconv-lite": "^0.6.3",
-    "mime": "^4.0.7",
-    "node-pty": "^1.0.0",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "slash": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "@nestjs/common": "catalog:",
+    "@nestjs/core": "catalog:",
+    "@nestjs/mapped-types": "catalog:",
+    "@nestjs/platform-express": "catalog:",
+    "@nestjs/platform-socket.io": "catalog:",
+    "@nestjs/websockets": "catalog:",
+    "file-type": "catalog:",
+    "fs-extra": "catalog:",
+    "iconv-lite": "catalog:",
+    "mime": "catalog:",
+    "node-pty": "catalog:",
+    "reflect-metadata": "catalog:",
+    "rxjs": "catalog:",
+    "slash": "catalog:",
+    "socket.io": "catalog:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
