--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
+    "@types/fs-extra": "catalog:",
     "@types/node": "^22.14.1",
+    "fs-extra": "catalog:",
     "unbuild": "^3.5.0"
   }
 }
