--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,6 +11,22 @@ catalog:
   simple-git-hooks: ^2.12.1
   prettier: ^3.5.3
   electron: ^35.2.0
+  '@nestjs/common': '^11.0.1'
+  '@nestjs/core': '^11.0.1'
+  '@nestjs/mapped-types': '*'
+  '@nestjs/platform-express': '^11.0.1'
+  '@nestjs/platform-socket.io': '^11.0.11'
+  '@nestjs/websockets': '^11.0.11'
+  'file-type': '^20.4.1'
+  'fs-extra': '^11.3.0'
+  'iconv-lite': '^0.6.3'
+  'mime': '^4.0.7'
+  'node-pty': '1.1.0-beta34'
+  'reflect-metadata': '^0.2.2'
+  'rxjs': '^7.8.1'
+  'slash': '^5.1.0'
+  'socket.io': '^4.8.1'
+  '@types/fs-extra': '^11.0.4'
 
 ignoredBuiltDependencies:
   - '@bolinjs/vite-plugin-log-label'
@@ -18,10 +34,10 @@ ignoredBuiltDependencies:
   - '@swc/core'
   - core-js
   - esbuild
-  - node-pty
   - simple-git-hooks
   - vue-demi
 
 onlyBuiltDependencies:
   - electron
   - electron-winstaller
+  - node-pty
