--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,7 +36,8 @@
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "slash": "catalog:",
-    "socket.io": "catalog:"
+    "socket.io": "catalog:",
+    "which": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -51,6 +52,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/which": "^3.0.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
