--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
     "@nestjs/websockets": "catalog:",
     "file-type": "catalog:",
     "fs-extra": "catalog:",
+    "get-port-please": "^3.1.2",
     "iconv-lite": "catalog:",
     "mime": "catalog:",
     "node-pty": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "slash": "catalog:",
-    "socket.io": "catalog:"
+    "socket.io": "catalog:",
+    "which": "^5.0.0"
   },
   "devDependencies": {
     "@app/cli": "workspace:*",
+    "@swc/core": "^1.10.7",
     "@vue/eslint-config-prettier": "catalog:",
     "@vue/eslint-config-typescript": "catalog:",
     "electron": "catalog:",
